# ML_PROJECTS

./: .gitignore  LICENSE  README.md  main.py  project1.ipynb  pyproject.toml
models/: __init__.py  body_model.py  speech_model.py  tone_model.py
utils/: __init__.py  audio.py  scoring.py  video.py  visualize.py
