[project]
name = "expo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "faster-whisper>=1.2.0",
    "matplotlib>=3.10.5",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "opencv-python-headless>=4.11.0.86",
    "pyaudio>=0.2.14",
    "scikit-learn>=1.7.1",
    "sounddevice>=0.5.2",
    "speechrecognition>=3.14.3",
    "streamlit>=1.49.0",
    "streamlit-webrtc>=0.63.4",
    "textstat>=0.7.8",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.55.4",
]
